[gd_scene load_steps=3 format=3 uid="uid://gi7i6hmto4hq"]

[ext_resource type="Script" uid="uid://6l6nk5hn04r" path="res://UI/BetterSlider/better_slider_range.gd" id="1_5g5l8"]
[ext_resource type="Script" uid="uid://dd0oeae7u4f3h" path="res://addons/Double_HSlider_gd/double_hslider.gd" id="2_5g5l8"]

[node name="BetterSlider" type="VBoxContainer" groups=["InputsUIs"]]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_5g5l8")

[node name="BetterSliderLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(93, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Test : "

[node name="DoubleHSliderGd" type="Range" parent="."]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(100, 24)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("2_5g5l8")
lower_value = 5.0
slider_color = Color(0.303233, 0.303233, 0.303233, 1)
range_color = Color(0.878431, 0.878431, 0.878431, 1)
hover_range_color = Color(1, 1, 1, 1)
grabber_color = Color(0.92, 0.92, 0.92, 1)
grabber_color_disabled = Color(0.580392, 0.580392, 0.580392, 1)
grabber_size = 8.0
slider_height = 8.0
metadata/_custom_type_script = "uid://dd0oeae7u4f3h"

[connection signal="ds_values_changed" from="DoubleHSliderGd" to="." method="_on_double_h_slider_gd_ds_values_changed"]
